--- a/src/main/resources/announcer.yml
+++ b/src/main/resources/announcer.yml
@@ -16,42 +16,22 @@ delay: 300
 # Available sounds: https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/Sound.html
 announcements:
   '1':
-    alignment: "default"
-    permission: false
-    sound: false
-    content: |-
-      Hello, {player_display_name}!
-      This is the first example announcement from MDChat.
-  '2':
-    alignment: "default"
-    permission: false
-    sound: false
-    content: |-
-      Hello, {player_display_name}!
-      This is the second example announcement from MDChat.
-  '3':
+    # Announcements are enabled by default and this setting does not need to be defined.
+    # They can be disabled individually if desired.
+    enabled: true
     # If the alignment is not specified, it will use default alignment.
     alignment: "default"
     # If a permission is not specified or set to false, it will be ignored.
     permission: "mdchat.announcement.three"
-    # If the sound is not specified or set to false, it will be entirely disabled.
+    # If the sound option is not specified or set to false, it will be entirely disabled.
     sound:
       # The name of the sound (see above for available sounds).
       name: "block_note_block_pling"
       # The pitch of the sound.
+      # Higher values increase pitch, lower values decrease pitch. Default pitch is 1.0.
       pitch: 1.0
       # The volume of the sound (0.0 = inaudible, 0.5 = half volume, 1.0 = full volume).
       volume: 0.5
     content: |-
       Hello, {player_display_name}!
-      This is an example announcement with sound and a permission requirement from MDChat.
-  '4':
-    alignment: "center"
-    permission: false
-    sound: false
-    # If the world is not specified, it will default to global.
-    # World specific announcements follow their own order per-world.
-    world: "world_the_end"
-    content: |-
-      Hello, {player_display_name}!
-      This is an example announcement only available in the End from MDChat.
+      This is an example announcement from MDChat.
