--- a/src/main/resources/locale.yml
+++ b/src/main/resources/locale.yml
@@ -6,10 +6,11 @@ version: "[${project.version}]"
 
 # Locale options for generic responses
 chat-cleared: "&e\u26A0 The chat has been cleared."
-chat-delay: "&e\u231A You can't send another chat message yet..."
-command-delay: "&e\u231A You can't perform another command yet..."
-chat-movement: "&e\u26A0 You can't send chat messages until you move."
-command-movement: "&e\u26A0 You can't perform commands until you move."
+chat-delay: "&e\u231A You can''t send another chat message yet..."
+command-delay: "&e\u231A You can''t perform another command yet..."
+chat-movement: "&e\u26A0 You can''t send chat messages until you move."
+command-movement: "&e\u26A0 You can''t perform commands until you move."
+chat-parrot: "&e\u26A0 Please refrain from repeating chat messages."
 chat-similarity: "&e\u26A0 Please refrain from sending similar chat messages."
 command-similarity: "&e\u26A0 Please refrain from performing similar commands."
 chat-uppercase: "&e\u26A0 Please refrain from using excessive uppercase in your chat messages."
