--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -19,6 +19,22 @@ movement-required:
   # Should commands require movement?
   commands: false
 
+# Should we prevent parroting chat messages?
+parrot:
+  # Should this check be case-sensitive?
+  case-sensitive: false
+  # Should we ignore player usernames when performing this check?
+  # This may have performance implications if a lot of users are online.
+  ignore-usernames: false
+  # The minimum length of a chat message to perform the parrot check.
+  minimum: 6
+  # The minimum percentage of similarity to the previous chat message.
+  percentage: 0
+  # The amount of time (in milliseconds) before the latest chat message expires.
+  decay: 5000
+  # Words that will be excluded from this check.
+  list: [ ]
+
 # Should we prevent similarities in these actions?
 # Setting a percentage value to 0 will disable the feature.
 similarity:
