--- a/pom.xml
+++ b/pom.xml
@@ -20,19 +20,19 @@
         <feather.version>0.0.10-alpha</feather.version>
 
         <!-- Check for updates here: https://github.com/JorelAli/CommandAPI/releases -->
-        <commandapi.version>8.8.0</commandapi.version>
+        <commandapi.version>9.0.3</commandapi.version>
 
         <!-- Check for updates here: https://github.com/tdebatty/java-string-similarity/releases -->
         <similarity.version>2.0.0</similarity.version>
 
         <!-- Check for updates here: https://bstats.org/getting-started/include-metrics -->
-        <bstats.version>3.0.1</bstats.version>
+        <bstats.version>3.0.2</bstats.version>
 
         <!-- Check for updates here: https://github.com/MilkBowl/VaultAPI/releases -->
         <vault.version>1.7.1</vault.version>
 
         <!-- Check for updates here: https://github.com/PlaceholderAPI/PlaceholderAPI/releases -->
-        <placeholderapi.version>2.11.2</placeholderapi.version>
+        <placeholderapi.version>2.11.3</placeholderapi.version>
     </properties>
 
     <repositories>
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.19-R0.1-SNAPSHOT</version>
+            <version>1.20-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -71,7 +71,7 @@
         </dependency>
         <dependency>
             <groupId>dev.jorel</groupId>
-            <artifactId>commandapi-shade</artifactId>
+            <artifactId>commandapi-bukkit-shade</artifactId>
             <version>${commandapi.version}</version>
         </dependency>
         <dependency>
