Update file comments and supply Paper plugin file

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,11 +5,12 @@
 metrics: true
 
 # The delay between these actions (in milliseconds).
-#   Setting a value to 0 will disable the feature.
 delay:
   # The delay between chat messages.
+  #   We won't set a delay on chat messages if this value is set to 0.
   chat: 0
   # The delay between commands.
+  #   We won't set a delay on commands if this value is set to 0.
   commands: 0
 
 # Should these actions require movement prior to being performed?
@@ -29,6 +30,7 @@ parrot:
   # The minimum length of a chat message to perform the parrot check.
   minimum: 6
   # The minimum percentage of similarity to the previous chat message.
+  #   We won't check for parroting if this value is set to 0.
   percentage: 0
   # The amount of time (in milliseconds) before the latest chat message expires.
   decay: 5000
@@ -36,7 +38,6 @@ parrot:
   list: [ ]
 
 # Should we prevent similarities in these actions?
-#   Setting a percentage value to 0 will disable the feature.
 similarity:
   # Should this check be case-sensitive?
   case-sensitive: false
@@ -46,16 +47,17 @@ similarity:
   # The minimum length of a chat message to perform the similarity check.
   chat-minimum: 6
   # The minimum percentage of similarity to the previous chat message.
+  #   We won't check for chat message similarity if this value is set to 0.
   chat-percentage: 0
   # The minimum length of a command to perform the similarity check.
   command-minimum: 12
   # The minimum percentage of similarity to the previous command.
+  #   We won't check for command similarity if this value is set to 0.
   command-percentage: 0
   # Words that will be excluded from this check.
   list: [ ]
 
 # Should we prevent excessive uppercase in these actions?
-#   Setting a percentage value to 0 will disable the feature.
 uppercase:
   # Should we cancel actions that violate this check?
   #   When this is false, actions will be replaced with lowercase instead.
@@ -66,10 +68,12 @@ uppercase:
   # The minimum length of a chat message to perform the excessive uppercase check.
   chat-minimum: 6
   # The minimum percentage of uppercase in the chat message.
+  #   We won't check for excessive uppercase in chat messages if this value is set to 0.
   chat-percentage: 0
   # The minimum length of a command's contents to perform the excessive uppercase check.
   command-minimum: 12
   # The minimum percentage of uppercase in the command.
+  #   We won't check for excessive uppercase in commands if this value is set to 0.
   command-percentage: 0
   # Words that will be excluded from this check.
   list: [ ]
